--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <link href="css/main.css" rel="stylesheet" />
     </head>
     <body>
-        <section class="landing" style="background-image: url(images/Netflix-background.jpg), linear-gradient(rgba(0, 0, 0, 0.082), white); background-size: cover;">
+        <section class="landing" style="background-image: url(Netflix-background.jpg), linear-gradient(rgba(0, 0, 0, 0.082), white); background-size: cover;">
             <div class="wrapper">
                 <img src="images/Netflix-logo-name.png" alt="netflix name" />
                 <div>
@@ -36,7 +36,7 @@
                     <h1>Enjoy on your TV.</h1>
                     <p>Watch on Smart TVs, Playstation, Xbox, Chromecast, Apple TV, Blu-ray players, and more.</p>
                 </div>
-                    <img src="images/Netflix-tv.png" alt="TV" />
+                    <img src="Netflix-tv.png" alt="TV" />
             </div>
         </section>
         <section class="mobile">
