--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
         <meta charset="utf-8"/>
         <meta name="viewport" content="width=device-width"/>
         <meta name="author" content="Israel Soneye" />
-        <meta name="description" content="Netflix landing page clonning" />
-        <title>Netflix clone</title>
+        <meta name="description" content="landing page clonning" />
+        <title>Module 6 cloning 1</title>
         <link href="css/main.css" rel="stylesheet" />
     </head>
     <body>
