--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="author" content="Israel Soneye" />
         <meta name="description" content="landing page clonning" />
         <title>Module 6 cloning 1</title>
-        <link href="css/main.css" rel="stylesheet" />
+        <link href="main.css" rel="stylesheet" />
     </head>
     <body>
         <section class="landing" style="background-image: url(Netflix-background.jpg), linear-gradient(rgba(0, 0, 0, 0.082), white); background-size: cover;">
